--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* color pallete */
 :root{
     --color-primary: #2584FF;
     --color-secondary: #00D9FF;
@@ -6,13 +7,84 @@
     --color-body: #918CA4;
 }
 
+/*  */
+
+/* Typography */
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-family: Inter, Arial, Helvetica, sans-serif;
+    font-size: 2.4rem;
+    line-height: 1.5;
+    color: var(--color-body);
+}
 
 h1, 
 h2, 
 h3 {
     color: var(--color-heading);
+    margin-bottom: 1rem;
+}
+
+h1 {
+    font-size: 7rem;
+}
+
+h2 {
+    font-size: 4rem;
+}
+
+h3 {
+    font-size: 3rem;
 }
 
 p {
-    color: var(--color-body);
+    margin-top: 0px;
+    
+}
+
+@media screen and (min-width: 1024px) {
+    body {
+        font-size: 1.8rem;
+    }
+    
+    h1 {
+        font-size: 8rem;
+    }
+
+    h2 {
+        font-size: 4rem;
+    }
+
+    h3 {
+        font-size: 2.4rem;
+    }
+}
+
+/* Links */
+.link-arrow{
+    color: var(--color-accent);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.link-arrow::after{
+    content: "->";
+    margin-left: 5px;
+    transition: margin .5s;
+}
+
+.link-arrow:hover::after{
+    transform: 5px;
+    margin-left: 50px;
+}
+
+@media screen and (min-width: 1024px) {
+    .link-arrow{
+        font-size: 1.5rem;
+    }
 }
