--- a/css/styles.css
+++ b/css/styles.css
@@ -88,3 +88,69 @@ p {
         font-size: 1.5rem;
     }
 }
+
+/* Badges */
+.badge{
+    border-radius: 20px;
+    padding: .5rem 2rem;
+    font-weight: 600;
+    white-space: nowrap;
+    color: aliceblue;
+}
+
+.badge--primary{
+    background: var(--color-primary);
+}
+
+.badge--secondary{
+    background: var(--color-secondary);
+}
+
+.badge-large{
+    font-size: 2rem;
+}
+
+.badge-small{
+    font-size: 1.6rem;
+}
+
+@media screen and (min-width: 1024px) {
+    .badge-large{
+        font-size: 1.5rem;
+    }
+    
+    .badge-small{
+        font-size: 1.2rem;
+    }
+}
+
+/* Lists */
+.list {
+    list-style: none;
+    padding-left: 0;
+    color: var(--color-heading);
+}
+
+.list--inline .list__item {
+    display: inline;
+    margin-right: 2rem;
+    font-weight: bold;
+}
+
+.list--tick {
+    list-style-image: url(../images/tick.svg);
+    padding-left: 3rem;
+}
+
+.list--tick .list__item {
+    padding-left: .5rem;
+    margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 1024px) {
+    .list--tick .list__item {
+        padding-left: 0;
+    }
+}
+
+/*  */
