--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /* color pallete */
-:root{
+:root {
     --color-primary: #2584FF;
     --color-secondary: #00D9FF;
     --color-accent: #FF3400;
@@ -21,8 +21,8 @@ body {
     color: var(--color-body);
 }
 
-h1, 
-h2, 
+h1,
+h2,
 h3 {
     color: var(--color-heading);
     margin-bottom: 1rem;
@@ -42,14 +42,14 @@ h3 {
 
 p {
     margin-top: 0px;
-    
+
 }
 
 @media screen and (min-width: 1024px) {
     body {
         font-size: 1.8rem;
     }
-    
+
     h1 {
         font-size: 8rem;
     }
@@ -64,7 +64,7 @@ p {
 }
 
 /* Links */
-.link-arrow{
+.link-arrow {
     color: var(--color-accent);
     text-decoration: none;
     text-transform: uppercase;
@@ -72,25 +72,25 @@ p {
     font-weight: 600;
 }
 
-.link-arrow::after{
+.link-arrow::after {
     content: "->";
     margin-left: 5px;
     transition: margin .5s;
 }
 
-.link-arrow:hover::after{
+.link-arrow:hover::after {
     transform: 5px;
     margin-left: 50px;
 }
 
 @media screen and (min-width: 1024px) {
-    .link-arrow{
+    .link-arrow {
         font-size: 1.5rem;
     }
 }
 
 /* Badges */
-.badge{
+.badge {
     border-radius: 20px;
     padding: .5rem 2rem;
     font-weight: 600;
@@ -98,28 +98,28 @@ p {
     color: aliceblue;
 }
 
-.badge--primary{
+.badge--primary {
     background: var(--color-primary);
 }
 
-.badge--secondary{
+.badge--secondary {
     background: var(--color-secondary);
 }
 
-.badge-large{
+.badge-large {
     font-size: 2rem;
 }
 
-.badge-small{
+.badge-small {
     font-size: 1.6rem;
 }
 
 @media screen and (min-width: 1024px) {
-    .badge-large{
+    .badge-large {
         font-size: 1.5rem;
     }
-    
-    .badge-small{
+
+    .badge-small {
         font-size: 1.2rem;
     }
 }
@@ -153,4 +153,12 @@ p {
     }
 }
 
+
+
 /*  */
+
+
+
+/*  */
+
+
