--- a/components/buttons.html
+++ b/components/buttons.html
@@ -14,9 +14,13 @@
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
-    <span class="badge badge--primary badge--large">10% off</span><br />
-    <span class="badge badge--primary badge--small">10% off</span><br />
-    <span class="badge badge--secondary badge--large">10% off</span><br />
-    <span class="badge badge--secondary badge--small">10% off</span><br />
+    <button class="btn btn--primary">Buy now</button>
+    <button class="btn btn--secondary">Buy now</button>
+    <button class="btn btn--accent">Buy now</button>
+    <button class="btn btn--outline">Buy now</button>
+    <a href="#" class="btn btn--primary">Buy now</a>
+
+    <button class="btn btn--primary btn--block">Buy now</button>
+    <a href="#" class="btn btn--secondary btn--block">Buy now</a>
   </body>
 </html>
