--- a/components/lists.html
+++ b/components/lists.html
@@ -14,9 +14,19 @@
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
-    <span class="badge badge--primary badge--large">10% off</span><br />
-    <span class="badge badge--primary badge--small">10% off</span><br />
-    <span class="badge badge--secondary badge--large">10% off</span><br />
-    <span class="badge badge--secondary badge--small">10% off</span><br />
+
+      <ul class="list list--inline ">
+          <li class="list__item">Item 1</li>
+          <li class="list__item">Item 2</li>
+          <li class="list__item">Item 3</li>
+          <li class="list__item">Item 4</li>
+      </ul>
+          
+      <ul class="list list--tick ">
+          <li class="list__item">Item 1</li>
+          <li class="list__item">Item 2</li>
+          <li class="list__item">Item 3</li>
+          <li class="list__item">Item 4</li>
+      </ul>
   </body>
 </html>
