--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@
     --color-body: #918CA4;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 /*  */
 
 /* Typography */
@@ -155,8 +159,72 @@ p {
 
 
 
-/*  */
+/* Buttons */
+.btn { 
+    border-radius: 40px;
+    border: 0;
+    cursor: pointer;
+    font-size: 1.8rem;
+    font-weight: 600;
+    padding: 2rem 3rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 1rem 0;
+}
 
+.btn--primary {
+    background-color: var(--color-primary);
+    color: aliceblue;
+}
+
+.btn--primary:hover {
+    background-color: #3a8ffd;
+    color: aliceblue;
+}
+
+.btn--secondary {
+    background-color: var(--color-secondary);
+    color: aliceblue;
+}
+
+.btn--secondary:hover {
+    background-color: #00c8eb;
+    color: aliceblue;
+}
+
+.btn--accent {
+    background-color: var(--color-accent);
+    color: aliceblue;
+}
+
+.btn--accent:hover {
+    background-color: #fd4516;
+    color: aliceblue;
+}
+
+.btn--outline {
+    background-color: aliceblue;
+    color: var(--color-heading);
+    border: 2px solid var(--color-heading);
+}
+
+.btn--outline:hover {
+    background-color: var(--color-heading);
+    color: aliceblue;
+    border: 2px solid var(--color-heading);
+}
+
+.btn--block {
+    width: 100%;
+    display: inline-block;
+}
+
+@media screen and (min-width: 1024px) {
+    .btn {
+        font-size: 1.5rem;
+    }
+}
 
 
 /*  */
