--- a/css/styles.css
+++ b/css/styles.css
@@ -364,5 +364,26 @@ p {
   }
 }
 
+/* Media */
+.media {
+    display: flex;
+}
+
+.media__title {
+    margin-top: 0;
+}
+
+.media__body {
+    margin: 0 2rem;
+}
+
+/*  */
+
+
+
+
+
+
+
 /*  */
 /*  */
