--- a/components/callouts.html
+++ b/components/callouts.html
@@ -12,8 +12,8 @@
     />
     <link 
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body style="padding: 3rem;">
     <div class="callout callout--primary">
@@ -27,5 +27,3 @@
   </div>
   </body>
 </html>
-
-
