--- a/components/collapsibles.html
+++ b/components/collapsibles.html
@@ -12,24 +12,22 @@
     />
     <link 
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body style="padding: 3rem;">
     <div class="collapsible collapsible--expanded">
       <header class="collapsible__header">
         <h2 class="collapsible__heading">Item 1</h2>
-        
-          <svg class="icon icon--white collapsible__chevron">
+        <svg class="icon icon--white collapsible__chevron">
             <use xlink:href="images/sprite.svg#chevron"></use>
-          </svg>
-        
+        </svg>
       </header>
       <div class="collapsible__content">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse quis eaque deserunt repellat excepturi sunt minus possimus voluptate, optio odio id ad architecto quibusdam sequi dolorem iure obcaecati voluptatum fuga voluptatibus commodi fugit voluptas, eum rerum? Eveniet officia voluptates recusandae reprehenderit. Mollitia sapiente laudantium esse vel porro itaque explicabo architecto!
       </div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
 
