--- a/components/nav.html
+++ b/components/nav.html
@@ -12,14 +12,14 @@
     />
     <link 
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <nav class="nav collapsible">
-      <a class="nav__brand" href="/"><img src="images/logo.svg" alt=""></a>
+      <a class="nav__brand" href="/"><img src="../images/logo.svg" alt=""></a>
       <svg class="icon icon--white nav__toggler">
-        <use xlink:href="images/sprite.svg#menu"></use>
+        <use xlink:href="../images/sprite.svg#menu"></use>
       </svg>
       <ul class="list nav__list collapsible__content">
         <li class="nav__item"><a href="#">Hosting</a></li>
@@ -31,7 +31,7 @@
 
 
     
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
 
