--- a/css/styles.css
+++ b/css/styles.css
@@ -334,6 +334,14 @@ p {
   color: aliceblue;
 }
 
+.card--primary .badge--primary {
+  background: #126de4;
+}
+
+.card--secondary .badge--secondary {
+  background: #02cdf1;
+}
+
 /* Plan */
 .plan__name {
   color: aliceblue;
@@ -363,6 +371,11 @@ p {
 .plan .list__item {
   margin-bottom: 2rem;
 }
+
+.plan--popular{
+  transform: scale(1.1);
+}
+
 .plan--popular .card__header {
   /* margin-top: 10px; */
   position: relative;
@@ -375,6 +388,18 @@ p {
   position: absolute;
   top: -6px;
   right: 5%;
+}
+
+.plan {
+  transition: transform .2s ease-out;
+}
+
+.plan:hover {
+  transform: scale(1.05);
+}
+
+.plan--popular:hover {
+  transform: scale(1.15);
 }
 
 @media screen and (min-width: 1024px) {
@@ -464,11 +489,11 @@ p {
   }
 }
 
-/* @media screen and (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
   .grid--1x3 {
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
   }
-} */
+}
 
 /* Testimonial */
 .testimonial {
@@ -734,11 +759,35 @@ p {
   }
 }
 
+/* Plans Block */
+.block-plans {
+  margin: 0 auto;
+}
+.block-plans .grid{
+  gap: 8rem 4rem;
+}
+
+.block-plans .card {
+  max-width: 550px;
+}
+
+/* Feature */
+
+
+
+
+
+
+
 
 
 
 
 /*  */
+/*  */
+
+
+
 /*  */
 
 
