--- a/components/plans-block.html
+++ b/components/plans-block.html
@@ -1,4 +1,4 @@
-<section class="block container block-plans">
+a<section class="block container block-plans">
     <div class="grid grid--1x3">
       <div class="card card--secondary plan">
         <div class="card__header">
